Callback VFS first version finished. Python example added
Signed-off-by: Sergey Krivohatskiy <s.krivohatskiy@gmail.com>

--- a/fuse_callbacks/README
+++ b/fuse_callbacks/README
@@ -4,4 +4,9 @@
 * Run `./configure && make && make install` to make and install fuse
 * Go to fuse_callbacks directory
 * Run `make` to make callbacks VFS
-* Run `./callbacks $DIRECTORY_TO_CLONE$ $MOUNT_POINT$ [$FUSE_ARGS$]` to mount callbacks VFS to `$MOUNT_POINT$` directory. Tip: use `-d` fuse flag for debugging
+* Run `./run.sh $DIRECTORY_TO_CLONE$ $MOUNT_POINT$` to mount callbacks VFS to `$MOUNT_POINT$` directory
+
+#Running callbacks.py
+* Download sysv_ipc(tested with version 0.6.8) from http://semanchuk.com/philip/sysv_ipc/
+* Extract and install sysv_ipc(see INSTALL file)
+* Run callbacks VFS and then run `python callbacks.py`
